<resources>
    <string name="app_name">bGo Passenger</string>
    <string name="welcome_text">Welcome to</string>
    <string name="bgo_text">B-Go</string>
    <string name="next">Next</string>
    <string name="toc">By logging in, you agree to the termsuse of</string>
    <string name="otp_text">OTP verification</string>
    <string name="otp_send">Enter the 6 digit number that we sent to your given mobile number</string>
    <string name="didntreceived_otp">Didn’t receive any OTP number !</string>
    <string name="resend">Resend code again.</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="offer">Offer</string>
    <string name="history">History</string>
    <string name="setting">Settings</string>
    <string name="one">1.Show your face inside the frame</string>
    <string name="two">2.Try to take clear fresh image.</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="personal_profile">Creat account</string>
    <string name="home_text">Let’s Find Your \nCar Rental for Trip</string>
    <string name="car_rental">CAR RENTAL</string>
    <string name="bbike">BBIKE</string>
    <string name="home_text2">Let’s Check Your \nUpcoming Trip</string>
</resources>