<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.OtpActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/_20sdp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:src="@drawable/otp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:fontFamily="@font/sf_ui_display_medium"
            android:text="@string/otp_text"
            android:textColor="@color/textPrimaryColor"
            android:textSize="@dimen/_24ssp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sf_ui_display"
            android:gravity="center_horizontal"
            android:text="@string/otp_send"
            android:textColor="@color/textSecondaryColor"
            android:textSize="@dimen/_12ssp" />
        <in.aabhasjindal.otptextview.OtpTextView
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_centerInParent="true"
            android:id="@+id/otp_pin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#2C2A2A"
            app:otp_box_background="@color/bGo_inputBg"
            app:height="40dp"
            app:width="40dp"
            app:bar_enabled="true"
            app:bar_height="2dp"
            app:length="6"
            app:otp_text_size="24dp"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/otp_verifyButton"
            android:layout_marginTop="@dimen/_20sdp"
            android:backgroundTint="@color/mainColor"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:text="@string/next"
            android:textAllCaps="false"
            android:fontFamily="@font/sf_ui_display"
            android:textSize="@dimen/_14ssp"
            app:cornerRadius="@dimen/_5sdp"/>
        <TextView
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sf_ui_display"
            android:gravity="center_horizontal"
            android:text="@string/didntreceived_otp"
            android:textColor="@color/textSecondaryColor"
            android:textSize="@dimen/_12ssp" />

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sf_ui_display"
            android:gravity="center_horizontal"
            android:text="@string/resend"
            android:textColor="@color/mainColor"
            android:textSize="@dimen/_12ssp" />

    </LinearLayout>

</LinearLayout>